--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -32,7 +32,21 @@
         ansible_ssh_private_key_file: "{{ g_ec2_private_key_file | default(omit) }}"
       with_items: "{{ ec2.instances }}"
 
-- name: Setup the apache server
+- name: Build application
+  hosts: localhost
+
+  tasks:
+    - name: Check for hellowebui application
+      stat: path=../hellowebui/
+      register: path
+
+    - name: Build locally
+      command: cp ../hellowebui/index.html ./roles/apache-simple/templates/index.html.j2
+      delegate_to: localhost
+      when: path.stat.exists
+
+
+- name: Deploy and run the apache server
   hosts: web
   become: true
   roles:
@@ -42,15 +56,25 @@
   hosts: localhost
 
   tasks:
+    - name: Stop instances
+      ec2:
+        instance_ids: '{{ ec2.instance_ids }}'
+        region: "{{ cli_ec2region }}"
+        vpc_subnet_id: subnet-c04a34a8
+        assign_public_ip: yes
+        state: stopped
+        wait: True
+
     - name: Register AMI
       ec2_ami:
         instance_id: "{{ item.id }}"
         wait: yes
-        name: "{{ cli_aminame }}"
+        name: "{{ g_aminame }}-{{ cli_version }}"
         tags:
-          Name: "{{ cli_aminame }}"
+          Name: "{{ g_aminame }}"
           Service: Core Instance
           Version: "{{ cli_version }}"
+          OpCo: "{{ g_opco }}"
       with_items: "{{ ec2.instances }}"
 
     - name: Terminate instances that were previously build
