--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -9,6 +9,7 @@
   - name: Find last application images
     ec2_ami_facts:
       owners: self
+      region: "{{ cli_ec2region }}"
       filters:
         "tag:Name": "{{ g_aminame }}"
         "tag:Version": "{{ cli_version }}"
