--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build_application:
 
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - tower-cli job launch --job-template site-build --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_version=$CI_PIPELINE_ID" --wait
+    - tower-cli job launch --job-template site-build --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_job_id=$CI_JOB_ID cli_ci_commit_message=$CI_COMMIT_MESSAGE" --wait
   environment:
     name: staging
 
