--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -65,7 +65,6 @@
         state: stopped
         wait: True
 
-    # add semver to replace cli_version
     - name: Find application images
       ec2_ami_facts:
         owners: self
@@ -109,7 +108,7 @@
         tags:
           Name: "{{ g_aminame }}"
           Service: Core Instance
-          Version: "{{ cli_version }}"
+          Version: "{{ version }}"
           OpCo: "{{ g_opco }}"
       with_items: "{{ ec2.instances }}"
 
