--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -97,18 +97,18 @@
       register: version
 
     # - name: Show stack outputs
-    #   debug: msg="Version {{ version[0] }}"
+    #   debug: msg="Version {{ version.stdout_lines[0] }}"
 
     - name: Register AMI
       ec2_ami:
         instance_id: "{{ item.id }}"
         region: "{{ cli_ec2region }}"
         wait: yes
-        name: "{{ g_aminame }}-{{ version[0] }}"
+        name: "{{ g_aminame }}-{{ version.stdout_lines[0] }}"
         tags:
           Name: "{{ g_aminame }}"
           Service: Core Instance
-          Version: "{{ version[0] }}"
+          Version: "{{ version.stdout_lines[0] }}"
           OpCo: "{{ g_opco }}"
       with_items: "{{ ec2.instances }}"
 
@@ -118,3 +118,10 @@
         instance_ids: '{{ ec2.instance_ids }}'
         region: "{{ cli_ec2region }}"
       with_items: "{{ ec2.instances }}"
+
+    - name: Copy using the 'content' for inline data
+      copy:
+        content: '{{ version.stdout_lines[0] }}'
+        dest: ./version.var
+      delegate_to: localhost
+      when: version.stdout_lines[0]
