--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -99,8 +99,8 @@
     # - name: Show stack outputs
     #   debug: msg="Version {{ version.stdout_lines[0] }}"
 
-    - debug:
-      msg: "{{ lookup('env', 'PWD') }}"
+    - name: Show stack outputs
+      debug: "{{ lookup('env', 'PWD') }}"
 
     - name: Copy using the 'content' for inline data
       copy:
