--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,10 +59,6 @@ build_application:
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - tower-cli job launch --job-template site-build --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_job_id=$CI_JOB_ID cli_ci_commit_message='$CI_COMMIT_MESSAGE'" --wait -v
-
-    - pwd
-    - ls -la ${PWD}
-    - ls -la ${PWD}/infrastructure/
   artifacts:
     paths:
       - ${PWD}/infrastructure/version.var
@@ -80,7 +76,7 @@ functional_test_service:
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - tower-cli job launch --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_awstemplate=aws.test.template cli_stackname=HelloWebuiTest cli_deploymentenv=staging cli_version=$CI_PIPELINE_ID" --wait
+    - tower-cli job launch --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_awstemplate=aws.test.template cli_stackname=HelloWebuiTest cli_deploymentenv=staging cli_ci_job_id=$CI_JOB_ID" --wait
 
     - mvn clean package -f ./hellowebui-functional-test
     - SUT_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Core Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
@@ -100,7 +96,7 @@ deploy_staging:
 
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - tower-cli job launch --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_awstemplate=aws.template cli_stackname=HelloWebui cli_deploymentenv=staging cli_version=$CI_PIPELINE_ID" --wait
+    - tower-cli job launch --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_awstemplate=aws.template cli_stackname=HelloWebui cli_deploymentenv=staging cli_ci_job_id=$CI_JOB_ID" --wait
   environment:
     name: staging
 
@@ -116,7 +112,7 @@ rollback_staging:
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure
-    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_stackname=HelloWebui cli_version=$CI_PIPELINE_ID"
+    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_stackname=HelloWebui cli_ci_job_id=$CI_JOB_ID"
   environment:
     name: staging
   when: manual
