--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -102,12 +102,6 @@
     # - name: Show stack outputs
     #   debug: "{{ lookup('env', 'PWD') }}"
 
-    - name: Copy using the 'content' for inline data
-      copy:
-        content: '{{ version.stdout_lines[0] }}'
-        dest: "{{ lookup('env', 'PWD') }}/infrastructure/version.var"
-      when: version.stdout_lines[0]
-
     - name: Register AMI
       ec2_ami:
         instance_id: "{{ item.id }}"
@@ -119,6 +113,7 @@
           Service: Core Instance
           Version: "{{ version.stdout_lines[0] }}"
           OpCo: "{{ g_opco }}"
+          Build: "{{ cli_ci_job_id }}"
       with_items: "{{ ec2.instances }}"
 
     - name: Terminate instances that were previously build
