--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -91,7 +91,7 @@
         chdir: ../
         target: version
         params:
-          CI_JOB_ID: "{{ cli_ci_job_id }}"
+          CI_PIPELINE_ID: "{{ cli_ci_pipeline_id }}"
           CI_COMMIT_MESSAGE: "{{ cli_ci_commit_message }}"
           PREVIOUS: "{{ ami.ansible_facts.latest_ami.tags.Version }}"
       register: version
@@ -113,7 +113,7 @@
           Service: Core Instance
           Version: "{{ version.stdout_lines[0] }}"
           OpCo: "{{ g_opco }}"
-          Build: "{{ cli_ci_job_id }}"
+          Build: "{{ cli_ci_pipeline_id }}"
       with_items: "{{ ec2.instances }}"
 
     - name: Terminate instances that were previously build
