--- a/infrastructure/build.yml
+++ b/infrastructure/build.yml
@@ -113,7 +113,7 @@
           Service: Core Instance
           Version: "{{ version.stdout_lines[0] }}"
           OpCo: "{{ g_opco }}"
-          Build: "{{ cli_ci_pipeline_id }}"
+          Build: "{{ g_aminame }}-{{ cli_ci_pipeline_id }}"
       with_items: "{{ ec2.instances }}"
 
     - name: Terminate instances that were previously build
