--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -51,20 +51,20 @@
       search_regex: OpenSSH
     with_items: "{{ ec2_facts.instances }}"
 
-  - name: Get facts about core instances
-    ec2_instance_facts:
-      region: "{{ cli_ec2region }}"
-      filters:
-        instance-state-name: running
-        "tag:aws:cloudformation:stack-name": "{{ cli_stackname }}"
-        "tag:Role": "Core Instance"
-    register: ec2_core_facts
+  # - name: Get facts about core instances
+  #   ec2_instance_facts:
+  #     region: "{{ cli_ec2region }}"
+  #     filters:
+  #       instance-state-name: running
+  #       "tag:aws:cloudformation:stack-name": "{{ cli_stackname }}"
+  #       "tag:Role": "Core Instance"
+  #   register: ec2_core_facts
 
-  - name: Build group of core instances
-    add_host:
-      name: "{{ item.public_ip_address }}"
-      groups: web
-      ansible_user: centos
-      ansible_host: "{{ item.public_ip_address }}"
-      ansible_ssh_private_key_file: "{{ g_ec2_private_key_file | default(omit) }}"
-    with_items: "{{ ec2_core_facts.instances }}"
+  # - name: Build group of core instances
+  #   add_host:
+  #     name: "{{ item.public_ip_address }}"
+  #     groups: web
+  #     ansible_user: centos
+  #     ansible_host: "{{ item.public_ip_address }}"
+  #     ansible_ssh_private_key_file: "{{ g_ec2_private_key_file | default(omit) }}"
+  #   with_items: "{{ ec2_core_facts.instances }}"
