--- a/infrastructure/setup-core.yml
+++ b/infrastructure/setup-core.yml
@@ -1,5 +1,5 @@
 ---
 - name: Ensure apache server is present and running with example home page
   tags:
-      - setup
+      - setup-core
   hosts: web
