--- a/infrastructure/site.yml
+++ b/infrastructure/site.yml
@@ -1,6 +1,7 @@
 ---
 - import_playbook: ./provision.yml
+- import_playbook: ./provision-core.yml
+- import_playbook: ./setup-core.yml
 - import_playbook: ./provision-test.yml
-- import_playbook: ./setup.yml
 - import_playbook: ./setup-test.yml
 - import_playbook: ./deprovision.yml
