--- a/infrastructure/provision-test.yml
+++ b/infrastructure/provision-test.yml
@@ -11,7 +11,7 @@
       region: "{{ cli_ec2region }}"
       filters:
         instance-state-name: running
-        "tag:aws:cloudformation:stack-name": "{{ cli_stackname }}"
+        "tag:stackname": "{{ cli_stackname }}"
         "tag:Role": "Test Instance"
     register: ec2_test_facts
 
