fix code style for ansible

--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -30,7 +30,8 @@
   #       Environment: "{{ cli_deploymentenv }}"
   #   register: stack
 
-  - terraform:
+  - name: create a terraform deploy
+    terraform:
       project_path: '{{ cli_tf }}'
       state: present
       variables:
