--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -38,6 +38,10 @@
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
         environment: "{{ cli_deploymentenv }}"
+      backend_config:
+        region: "us-west-1"
+        bucket: "iaggbs-terraform-backend"
+        key: "random.tfstate"
     register: stack
 
   - name: Get facts about all the newly created instances
