--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -34,7 +34,7 @@
     terraform:
       project_path: '{{ cli_tf }}'
       state: present
-      force_init: yes
+      # force_init: yes
       variables:
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
@@ -42,6 +42,9 @@
       backend_config:
         region: "us-west-1"
         bucket: "iaggbs-terraform-backend"
+        key: "terraform.tfstate"
+        access_key: AKIAIX3DNBYFKAC3H4QA
+        secret_key: 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
     register: stack
 
   - name: Get facts about all the newly created instances
