--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -34,7 +34,7 @@
     terraform:
       project_path: '{{ cli_tf }}'
       state: present
-      # force_init: yes
+      force_init: yes
       variables:
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
