--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -35,6 +35,8 @@
       project_path: '{{ cli_tf }}'
       state: present
       force_init: true
+      backend_config:
+        key: "hellowebui-staging"
       variables:
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
