--- a/infrastructure/deprovision.yml
+++ b/infrastructure/deprovision.yml
@@ -28,7 +28,7 @@
       state: absent
       force_init: true
       backend_config:
-        key: "hellowebui-staging"
+        key: "{{ cli_stackname }}"
       variables:
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
