--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -36,7 +36,7 @@
       state: present
       force_init: true
       backend_config:
-        key: "hellowebui-staging"
+        key: "{{ cli_stackname }}"
       variables:
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
