--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,10 +81,10 @@ build_application:
     - terraform init -backend-config="key=$STACKNAME"
 
     - tower-cli job launch 
-        --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+        --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
         --tags "provision,provision-core,setup-core" 
         --wait
-    # - ansible-playbook site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+    # - ansible-playbook site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
     #     --tags "provision,provision-core,setup-core" 
     #     --wait
 
@@ -123,7 +123,7 @@ functional_test_service:
   script:
     - tower-cli job launch 
       --job-template site-prov 
-      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=HelloWebuiTest cli_deploymentenv=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=HelloWebuiTest cli_deploymentenv=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
       --tags "provision,provision-core,setup-core,provision-test,setup-test" 
       --wait
 
@@ -134,7 +134,7 @@ functional_test_service:
 
     - tower-cli job launch 
       --job-template site-deprov 
-      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=HelloWebuiTest cli_deploymentenv=test cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=HelloWebuiTest cli_deploymentenv=test cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   only:
     - master
   except:
@@ -175,7 +175,7 @@ functional_regression_test_staging:
   script:
     - tower-cli job launch 
       --job-template site-prov 
-      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_awstemplate=aws.test.template cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_awstemplate=aws.test.template cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
       --tags "provision,provision-test,setup-test" 
       --wait
 
@@ -185,7 +185,7 @@ functional_regression_test_staging:
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar $SUT_IP $TESTER_IP
 
     - tower-cli job launch 
-      --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --job-template site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
       --tags "provision" 
       --wait
   only:
@@ -210,8 +210,8 @@ stop-staging:
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'"
-    # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_stackname=$STACKNAME cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=staging cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_stackname=$STACKNAME cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
   environment:
     name: staging
@@ -242,8 +242,8 @@ stop-review:
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'"
-    # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_stackname=$STACKNAME cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_tf=./ cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=$AWS_ACCESS_KEY_ID cli_aws_secret_key=$AWS_SECRET_ACCESS_KEY cli_stackname=$STACKNAME cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
   environment:
     name: $CI_BUILD_REF_NAME
