--- a/infrastructure/deprovision.yml
+++ b/infrastructure/deprovision.yml
@@ -27,4 +27,6 @@
         AMI: "{{ ami_find.images[0].image_id }}"
         stackname: "{{ cli_stackname }}"
         environment: "{{ cli_deploymentenv }}"
+        aws_access_key: "{{ cli_aws_access_key }}"
+        aws_secret_key: "{{ cli_aws_secret_key }}"
     register: stack
