--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ static_test_provision:
   stage: test code
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
   script:
-    - cd ./infrastructure
+    - cd ./infrastructure/terraform
     - terraform validate -check-variables=true
   except:
     - triggers
@@ -117,7 +117,7 @@ plan:
   stage: review application
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
   script:
-    - cd ./infrastructure
+    - cd ./infrastructure/terraform
     - terraform workspace select staging
     - terraform plan -out ./tfplan.txt
   only:
