--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,10 @@ static_test_service:
 static_test_provision:
   stage: test code
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  before_script:
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure/terraform
     - terraform init
@@ -117,6 +121,10 @@ review:
 plan:
   stage: review application
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  before_script:
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure/terraform
     - terraform init
